# DeepResearch

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: AUDIT_REPORT.md  DESIGN.md  RESULTS.md
eval/: ci_baseline.py  fake_llm.py  judge.py  race_judge.py  run_eval.py
infra/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
observability/: prometheus.yml
results/: architecture_ablation_20260702T164109Z.json  architecture_ablation_20260707T130241Z.json  architecture_ablation_20260708T073543Z.json  architecture_ablation_20260708T083328Z.json  cache_measurement_20260702T122421Z.json  cache_measurement_20260707T101812Z.json  cache_measurement_20260707T102124Z.json  ci_baseline.json  ci_gate_comment.md  eval_custom_20260705T134234Z.json  eval_custom_20260707T073553Z.json  eval_custom_20260707T110525Z.json  eval_custom_20260717T155328Z.json  eval_custom_20260717T155639Z.json  eval_custom_20260718T113754Z.json  eval_custom_20260718T123628Z.json  eval_custom_20260718T131905Z.json  eval_custom_20260718T175531Z.json  eval_custom_20260719T073232Z.json  eval_custom_20260719T074735Z.json  eval_custom_20260719T104243Z.json  eval_custom_20260719T115032Z.json  eval_custom_20260719T115433Z.json  eval_full_20260707T182512Z.json  eval_reliability_20260702T155323Z.json  eval_smoke_20260702T154642Z.json  eval_smoke_20260705T135050Z.json  eval_smoke_20260707T090946Z.json  eval_smoke_20260718T100522Z.json  failure_analysis_20260718T092043Z.json  failure_analysis_20260718T092107Z.json  (+3 more)
(+322 files in other folders)
