[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepresearch"
version = "0.1.0"
description = "Agentic deep-research system — evals-as-a-system and AIOps are the deliverable."
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.34",
    "anthropic~=0.68",
    "httpx~=0.28",
    "pydantic~=2.10",
    "python-dotenv~=1.0",
    "opentelemetry-api~=1.29",
    "opentelemetry-sdk~=1.29",
    "opentelemetry-exporter-otlp-proto-http~=1.29",
    "sentence-transformers~=3.4",
    "torch~=2.12",
    "transformers~=4.57",
    "redis~=8.0",
    "prometheus-client~=0.25",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg~=0.30",
    "aiosqlite~=0.20",
    "rank-bm25~=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.25",
    "fakeredis~=2.36",
]
eval = [
    "datasets~=3.2",
    "fakeredis~=2.36",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/deepresearch"]
